Bug 1548317 - Fix twisty color in selected TreeView rows; r=Honza,yzen
Changes impact theme-twisty icons in the TreeView component:
- Make sure theme-twisty uses the selection color (white) in selected rows;
  but override that style for Network details accordion headers.
- Improve the vertical alignment and pixel-perfect icon rendering by
  making sure the icon element takes the full available height (16px)
  and avoiding assymetrical padding (affects the rendering of centered
  background-image, making them blurry on 1x displays).
- Tweak the horizontal spacing of theme-twisty icons so that they take
  up a total of 20px width (similar to what is used in Debugger and
  Inspector), versus 17px previously.

Differential Revision: https://phabricator.services.mozilla.com/D29550

UltraBlame original commit: 3499107fb6fed729654a8e6d719f7bbaff9c5ca1

--- a/devtools/client/netmonitor/src/assets/styles/NetworkDetailsPanel.css
+++ b/devtools/client/netmonitor/src/assets/styles/NetworkDetailsPanel.css
@@ -750,6 +750,43 @@ container
 .
 treeTable
 .
+treeRow
+.
+tree
+-
+section
+.
+theme
+-
+twisty
+{
+fill
+:
+var
+(
+-
+-
+theme
+-
+icon
+-
+dimmed
+-
+color
+)
+;
+}
+.
+network
+-
+monitor
+.
+tree
+-
+container
+.
+treeTable
+.
 treeValueCell
 {
 max
